syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.lieluobo.proj.grpc.proto";
option java_outer_classname = "UserProto";

message AddUserRequest {
    string name = 1;
}

message AddUserResponse {
}

message GetAllUserRequest {
}

message GetAllUserResponse {
    repeated User users = 1;
}

message User {
    int64 id = 1;
    string name = 2;
}

service UserService {
    rpc Add (AddUserRequest) returns (AddUserResponse) {
    }

    rpc GetAll (GetAllUserRequest) returns (GetAllUserResponse) {
    }
}